<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Over The Wod</string>
    <string name="firststep">Első lépések</string>
    <string name="facebook_app_id" translatable="false">855021101271180</string>
    <string name="fb_login_protocol_scheme" translatable="false">855021101271180</string>
    <string name="login">Bejelentkezés</string>
    <string name="has">Hasizom edzés inditása</string>
    <string name="testexer">Edzéslista lekérése</string>
    <string name="test_text">Edzések listája \nLokálisan állitott szinttel</string>
    <string name="kar">Karizom edzés inditása</string>
    <string name="time">Az edzés ideje 10 perc \nNincs szükséges kellék</string>
    <string name="bmi">BMI kalkulátor</string>
    <string name="bmidesc">BMI (testtömeg-index) kalkulátorunk segítségével megtudhatja, hogy mennyi az Ön BMI értéke, és az melyik tartományba esik.</string>
    <string name="timekar">Az edzés ideje 7 perc \nSzükséges kellék: 1db (m)(me) kézi súlyzó</string>
    <string name="startbmi">Inditás</string>
    <string name="pulse">Edzési pulzustartomány kalkulátor</string>
    <string name="pulsedesc">Számolja ki Ön is edzéscéljához megfelelő pulzustartományt!</string>
    <string name="startPulse">Inditás</string>
    <string name="pulse_label">Over The Wod Beta - Pulzus kalkulátor</string>
    <string name="bmi_label">Over The Wod Beta - BMI kalkulátor</string>
    <string name="title_activity_settings">Beállitások</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-1022277907588148/9426868513</string>
    <string name="play">Play</string>
    <string name="group">Csoport keresése</string>
    <string name="title_activity_in_group">group_title</string>
    <string name="action_settings">Kilépés</string>
    <string name="section_format">Szekció: %1$d</string>
    <string name="large_text">Bejegyzések előkészületben</string>


</resources>
