<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/bmi_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_margin="15dp">
            android:layout_margin="8dp"
            android:longClickable="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/indicator" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/bmi"
                    android:textColor="#222"
                    android:textStyle="bold"
                    android:textSize="22dp"
                    android:gravity="center_horizontal"
                    android:layout_below="@+id/thumbnail"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/desc"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/bmidesc"
                    android:textColor="#666"
                    android:textSize="14dp"
                    android:textStyle="italic" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_selector"
                    android:textColor="@android:color/white"
                    android:text="@string/startbmi"
                    android:onClick="startBMI"
                    android:textSize="17sp"
                    android:padding="12dp"
                    android:id="@+id/bmi_start_button"
                    android:layout_gravity="center"
                    android:layout_below="@+id/desc"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="5dp" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/pulse_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_margin="15dp">
            android:layout_margin="8dp"
            android:longClickable="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/thumbnails"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pulse" />

                <TextView
                    android:id="@+id/titles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/pulse"
                    android:textColor="#222"
                    android:textStyle="bold"
                    android:textSize="22dp"
                    android:gravity="center_horizontal"
                    android:layout_below="@+id/thumbnails"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/descs"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/titles"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/pulsedesc"
                    android:textColor="#666"
                    android:textSize="14dp"
                    android:textStyle="italic" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_selector"
                    android:textColor="@android:color/white"
                    android:text="@string/startbmi"
                    android:layout_below="@+id/descs"
                    android:onClick="startPULSE"
                    android:textSize="17sp"
                    android:padding="12dp"
                    android:id="@+id/pulse_start_button"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="5dp" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>